# atlas-qdpx

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
atlas-qdpx/: __init__.py  dataframes.py  files.py
atlas_qdpx/: __init__.py  constants.py  dataframes.py  files.py  paragraphs.py  qdpx.py  standardizer.py  transformations.py  utils.py
atlas_qdpx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
atlas_qdpx/spacy_standardizer/: __init__.py  spacy_standardizer.py
functions/: bulk.py  constants.py  dataframes.py  qdpx.py  standardization.py
spacy_standardizer/: spacy_standardizer.py
